objects/Campaign_WorkGroup_BU_Mapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Used to update the BU and Sub-BU fields on Campaign based on the Work Group Values</description>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Business_Unit__c</fullName>
        <label>Sub Business Unit</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workgroup_Value__c</fullName>
        <label>Workgroup Value</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <label>Campaign WorkGroup BU Mapping</label>
</CustomObject>